# 3D23_zadania

Assignments/Uniforms/: README.md
Models/: square.mtl
src/Assignments/CameraMovement/: CMakeLists.txt  CameraControler.h  app.cpp  app.h
src/Assignments/CameraMovement/shaders/: base_fs.glsl
src/Assignments/Colors/: app.cpp
src/Assignments/Colors/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/Indices/: app.cpp
src/Assignments/MeshesMaterials/: CMakeLists.txt  app.cpp  app.h
src/Assignments/PVM/: app.cpp
src/Assignments/PVM/shaders/: base_fs.glsl
src/Assignments/Phong/: CMakeLists.txt  app.cpp  app.h
src/Assignments/Phong/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/Pyramid/: app.cpp
src/Assignments/Resizing/: app.cpp  app.h
src/Assignments/Textures/: CMakeLists.txt  CameraControler.h  README.md  app.cpp  app.h  camera.h
src/Assignments/Textures/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/Uniforms/: app.cpp
src/Assignments/Uniforms/shaders/: base_vs.glsl
src/Assignments/Zoom/: app.cpp  app.h  camera.h
src/Assignments/Zoom/shaders/: base_vs.glsl
src/Engine/: CMakeLists.txt  ColorMaterial.cpp  ColorMaterial.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PhongMaterial.cpp  PhongMaterial.h  mesh_loader.cpp  texture.cpp  texture.h
src/Engine/shaders/: color_fs.glsl  phong_fs.glsl  phong_vs.glsl
src/ObjectReader/: obj_reader.h
src/XeEngine/: CMakeLists.txt  ColorMaterial.cpp  ColorMaterial.h  Material.h  PhongMaterial.h  mesh_loader.cpp
